<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">

    <!--<Switch
        android:id="@+id/switch1"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:text="Switch" />
    <Button
        android:id="@+id/button_new_form"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Nuevo formulario" />-->


    <ScrollView
        style="@style/MainScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:text="@string/questionnaire" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView android:id="@+id/questionWording1"
                    style="@style/QuestionWording"
                    android:text="@string/question1" />
                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/questionOption1"
                        style="@style/QuestionOption"
                        app:buttonTint="@android:color/holo_green_light"
                        android:text="@string/questionOption1" />
                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/questionOption2"
                        style="@style/QuestionOption"
                        app:buttonTint="@android:color/holo_green_light"
                        android:text="@string/questionOption2"/>
                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/questionOption3"
                        style="@style/QuestionOption"
                        app:buttonTint="@android:color/holo_green_light"
                        android:text="@string/questionOption3"/>
                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/questionOption4"
                        android:checked="true"
                        style="@style/QuestionOption"
                        app:buttonTint="@android:color/holo_green_light"
                        android:text="@string/questionOption4"/>
                </RadioGroup>


            </LinearLayout>

            <Button
                android:id="@+id/button_send_form"
                style="@style/CodeFont.BigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enviar formulario"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="62dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Guardar" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Nuevo Formulario" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Enviar Resultados" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
